force-app/main/default/objects/Case/fields/Routing_Exception__c.field-meta.xml
<CustomField>
    <fullName>Routing_Exception__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Routing Exception</label>
    <type>Checkbox</type>
</CustomField>