force-app/main/default/objects/Case/fields/Sla_Reminder_Sent__c.field-meta.xml
<CustomField>
    <fullName>Sla_Reminder_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SLA Reminder Sent</label>
    <type>Checkbox</type>
</CustomField>